Switch cloud task to use cleanup function instead of delete.